# erpnext-esignature

./: README.md  app.py  hooks.py  install.py  pyproject.toml  requirements.txt  setup.py  task.py
api/: external_signing.py  signature_request.py
config/: desktop.py  docs.py
doctype/digital_certificate/: digital_certificate.json  digital_certificate.py
doctype/esignature_settings/: esignature_settings.json
doctype/signature_request/: signature_request.json  signature_request.py
integrations/: email_provider.py  webhook_handler.py
mobile/: signature_app.js
patches/v1_0/: create_default_certificates.py
public/js/: digital_certificate.js  quotation.js  salary_slip.js  sales_invoice.js  signature_request.js
reports/signature_analytics/: signature_analytics.json  signature_analytics.py
templates/print_formats/: quotation_with_signature.html
tests/: test_certificate_manager.py  test_signature_request.py
utils/: certificate_manager.py  document_handler.py  pdf_handler.py  security_manager.py  signature_validator.py
workspace/: esignature_workspace.json
www/: hooks.py  sign_document.html  sign_document.py
www/www/: hooks.py  patches.txt
