[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "esignature"
authors = [{name = "Chandorkar Technologies", email = "ninad@chandorkartechnologies.com"}]
dynamic = ["1.0.0", "description"]
readme = "README.md"
dependencies = [
    "frappe>=14.0.0",
    "pyhanko>=0.19.0",
    "cryptography>=3.4.8",
    "qrcode>=7.3.1",
    "reportlab>=3.6.0"
]

[project.urls]
Home = "https://github.com/Chandorkar-Technologies/erpnext-esignature"